@startuml
class ClassAnalyzer {
  + analyze() : List<UMLClass>
  - getVisibility() : String
}
class FileAnalyzer {
  + scan() : List<File>
}
class RelationShipAnalyzer {
  - association : AssociationDetector
  - inheritance : InheritanceDetector
  - implementation : ImplementationDetector
  - dependency : DependencyDetector
  - composition : CompositionDetector
  + analyze() : List<UMLRelationship>
}
class AssociationDetector {
  + detect() : List<UMLRelationship>
}
class CompositionDetector {
  + detect() : List<UMLRelationship>
}
class DependencyDetector {
  + detect() : List<UMLRelationship>
}
class ImplementationDetector {
  + detect() : List<UMLRelationship>
}
class InheritanceDetector {
  + detect() : List<UMLRelationship>
}
class Dog {
  - name : String
  - age : int
  + getName() : String
  + setName() : void
  + getAge() : int
  + setAge() : void
}
class Animal {
  - name : String
  - age : int
  + getName() : String
  + setName() : void
  + getAge() : int
  + setAge() : void
}
class UMLGeneratorFactory {
  + createRelationshipAnalyzer() : RelationShipAnalyzer
  + createUMLGenerator() : UMLGenerator
}
class PdfGenerator {
  + printDiagram() : void
}
class PlainUmlGenerator {
  + generate() : String
}
class UMLCodeGenerator {
  + saveUMLCode() : void
}
class UMLClass {
  - name : String
  - fields : List<UMLField>
  - methods : List<UMLMethod>
  - interfaces : List<String>
  - parentClass : List<String>
  - dependencies : List<String>
  - createdObjects : List<String>
  + getName() : String
  + setName() : void
  + getFields() : List<UMLField>
  + setFields() : void
  + getMethods() : List<UMLMethod>
  + setMethods() : void
  + getInterfaces() : List<String>
  + setInterfaces() : void
  + getParentClass() : List<String>
  + setParentClass() : void
  + getDependencies() : List<String>
  + setDependencies() : void
  + getCreatedObjects() : List<String>
  + setCreatedObjects() : void
}
class UMLField {
  - name : String
  - type : String
  - visibility : String
  + toString() : String
  + getName() : String
  + setName() : void
  + getType() : String
  + setType() : void
  + getVisibility() : String
  + setVisibility() : void
}
class UMLMethod {
  - name : String
  - returnType : String
  - visibility : String
  - parameter : List<String>
  + getName() : String
  + setName() : void
  + getReturnType() : String
  + setReturnType() : void
  + getVisibility() : String
  + setVisibility() : void
  + getParameter() : List<String>
  + setParameter() : void
}
class UMLRelationship {
  - source : String
  - target : String
  - type : RelationshipType
  + toString() : String
  + getSource() : String
  + setSource() : void
  + getTarget() : String
  + setTarget() : void
  + getType() : RelationshipType
  + setType() : void
}
class UMLGenerator {
  - fileAnalyzer : FileAnalyzer
  - generator : PlainUmlGenerator
  - pdfGenerator : PdfGenerator
  - classAnalyzer : ClassAnalyzer
  - relationshipAnalyzer : RelationShipAnalyzer
  - codeGenerator : UMLCodeGenerator
  + generate() : void
}
class UmlCommands {
  + main() : void
}
class RelationshipUtils {
  + generateRelationshipArrow() : String
}
RelationShipAnalyzer -- CompositionDetector
RelationShipAnalyzer -- AssociationDetector
UMLGenerator -- PlainUmlGenerator
RelationShipAnalyzer -- DependencyDetector
UMLGenerator -- UMLCodeGenerator
RelationShipAnalyzer -- InheritanceDetector
RelationShipAnalyzer -- ImplementationDetector
UMLGenerator -- FileAnalyzer
UMLGenerator -- ClassAnalyzer
UMLGenerator -- PdfGenerator
UMLGenerator -- RelationShipAnalyzer
Dog --|> Animal
@enduml
